# softfactory

./: .clauderules  .commitlintrc.json  .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.optional.json  .n8nconfig.json  .ngrok.yml  .pre-commit-config.yaml  .semver.yaml  .vercelignore  5-TASKS-PER-TEAM-ACTION-PLAN.md  8-TEAM-EXECUTION-RESULTS.md  8TEAM_VALIDATION_FINAL_REPORT.md  ACCESSIBILITY_CHECKLIST.md  ACTUAL_STATUS_REPORT.md  AGENTS.md  API_ENDPOINT_QUICK_REFERENCE.md  API_INTEGRATION_REPORT_T10.md  API_QUICK_REFERENCE.txt  AUTOMATION_AND_ANALYSIS_REPORT.md  BLOCKER-ROOT-CAUSE-ANALYSIS.md  BOT_COMMANDS.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODEX.md  COMPLETE_SESSION_FINAL_REPORT.txt  CONTINUOUS_IMPROVEMENT_FINAL_REPORT.md  COOCOOK_FRONTEND_DELIVERY.md  COOCOOK_QUICK_START.md  COOCOOK_RECIPE_ENDPOINTS_SUMMARY.md  DAILY_OPERATIONS_GUIDE.md  DELIVERY-M-006-REPORT.md  DELIVERY_CHECKLIST.md  DELIVERY_CHECKLIST.txt  DELIVERY_SUMMARY.txt  DELIVERY_SUMMARY_N8N_READY.md  DELIVERY_SUMMARY_PAYMENT_v2.md  (+185 more)
.agent/: AGENT_PROTOCOLS.md  AGENT_SYSTEM.md  CONTEXT_ENGINE.md  COST_RULES.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit
.zap/: rules.tsv
agents/: __init__.py
api/: _health.js  ping.py  proxy.js  runtime.py
backend/: DATABASE_MODELS_COMPLETE.md  ELASTICSEARCH_SETUP.md  __init__.py  app.py  auth.py  cache.py  caching_config.py  code_executor.py  config.py  config_validator.py  data_accumulator.py  encryption_service.py  error_api.py  error_tracker.py  i18n.py  input_validator.py  jarvis_api.py  logging_config.py  metrics.py  migration_helpers.py  models.py  models.py.bak  models_i18n.py  monitoring.py  oauth.py  password_validator.py  payment.py  performance_monitor.py  platform.py  platform_routes.py  public_access_handler.py  query_optimization_examples.py  rate_limiter.py  rbac.py  runtime_paths.py  scheduler.py  scheduler.py.bak  security_middleware.py  sql_optimizations.sql  telegram_service.py  (+3 more)
core/: AGENT_COLLABORATION_LAYER.md  __init__.py  agent_spawner.py  consultation.py  consultation_bus.py  document_engine.py  handoff.py  ledger.py  logger.py  mission_manager.py  notifier.py  sequential_thinking.py  skills_registry.py
daemon/: .control_panel_autostart_prompted  CHANGELOG_v2.0.md  CONSOLIDATION_AUDIT.md  INTEGRATION_LOG.md  README.md  README_HANDLERS.md  TEAM_H_COMPLETION_SUMMARY.md  build_control_panel_exe.bat  control_panel.spec  control_panel_launcher.py  daemon_control_panel.py  daemon_service.py  project_brain.md  quick_check.py  skill_bridge.py  telegram_init.py
data/: dev.db
docs/: 2FA_DELIVERY_REPORT.md  2FA_IMPLEMENTATION.md  2FA_QUICK_START.md  ACCESSIBILITY_IMPLEMENTATION_GUIDE.md  ACCESSIBILITY_REPORT.md  ADD_NEW_SERVICE.md  AGENT_SKILLS.md  API-PERFORMANCE-GUIDE.md  API.md  API_DOCUMENTATION_SUMMARY.md  API_ENDPOINTS.md  API_FILE_STORAGE.md  API_PAYMENTS.md  API_QUICK_REFERENCE.md  API_REFERENCE.md  API_REFERENCE_INDEX.md  API_SHOPPING_LIST_v2.md  ARCHITECTURE-ADVANCED.md  ARCHITECTURE.md  AWS_IAM_POLICY.md  Automation.md  CATALOG.json  CI-CD-PIPELINE.md  CLAUDE_API_ARCHITECTURE_DIAGRAM.md  CLAUDE_API_DESIGN_DELIVERABLES.md  CLAUDE_API_IMPLEMENTATION_ROADMAP.md  CLAUDE_API_INTEGRATION.md  CLAUDE_API_INTEGRATION_SUMMARY.md  CLAUDE_API_TESTING_STRATEGY.md  CODE_NODES_API.md  CODE_NODES_GETTING_STARTED.md  CODE_NODES_GUIDE.md  CODE_NODES_IMPLEMENTATION.md  CODE_NODES_QUICK_START.md  COMPETITIVE_POSITIONING.md  CONSULTATION_PROTOCOL.md  COOCOOK_FEED_API.md  COOCOOK_FEED_IMPLEMENTATION_SUMMARY.md  COOCOOK_PROTOCOL.md  CUSTOMER_ACQUISITION_STRATEGY.md  (+107 more)
infrastructure/: README.md
instance/: platform.db
locales/: en.json  ja.json  ko.json  zh.json
memory/: M002_PHASE4_SETUP_COMPLETE.md  M006_TEAM_H_API_JS_EXPANSION.md  MEMORY.md  TEAM_H_HANDOFF_T09.md
migrations/: alembic.ini  env.py
monitoring/: DEPLOYMENT_CHECKLIST.md  access_logging.py  alertmanager.yml  alerts.yml  grafana_init.sh  health_check.sh  prometheus.yml
n8n/: DEPLOYMENT-READY.txt  INDEX.md  README.md  SETUP-SUMMARY.md  backup-strategy.md  environment-template.env  monitoring-dashboard.json  setup-guide.md  troubleshooting.md
nginx/: nginx.conf  nginx.production.conf
nvm/: settings.txt
orchestrator/: README.md  agent-registry.md  alert-rules.yml  alertmanager-config.yml  automation-governance.json  bohemian-marketing-mission.md  lean-execution-protocol.md  logstash-config.conf  mcp-registry.md  orchestration-engine.md  phase-structure-v4.md  prometheus-config.yml  prompt-templates.md  task-queue.json
qa-mobile/: viewport-audit.json
scripts/: DEPLOYMENT_EXECUTION_SCRIPT.sh  agent_3h_loop.py  api_server.py  auth-browser-regression.py  backup.sh  backup_db.py  bot_config_store.py  check-deployed-web-links.py  check-doc-metadata.ps1  check-repo-layout.py  classify_worktree_changes.py  continuous_improvement.sh  create_coocook_tables.py  department_queue_worker.py  department_review_list_worker.py  deploy.sh  deployment_simulator.py  enterprise_parallel_runner.py  generate_changelog.py  generate_daily_report.py  generate_docs_catalog.py  generate_openapi.py  generate_report.py  health-check-enhanced.sh  health-check.sh  jarvis_bot.py  jarvis_telegram_main.py  jarvis_telegram_simple.py  jarvis_v2.py  live_dashboard.py  load_test.py  local_server.py  localtunnel-start.sh  m007_orchestrator.py  m007_validate.py  marketing_kit.py  migrate_to_postgres.py  monitor_token_usage.sh  n8n-backup-database.sh  n8n-backup-full.sh  (+44 more)
shared-intelligence/: AI_COST_STRATEGY.md  ARCHITECTURE_DIAGRAMS.md  COOCOOK_MVP_PHASE5.md  DEPLOYMENT.md  DEPLOYMENT_INFRASTRUCTURE_SUMMARY.md  DEPLOYMENT_SUMMARY.md  ERROR_PREVENTION_GUIDE.md  FINAL_COMPLETION_REPORT.md  INFRASTRUCTURE_REPORT.md  M-002-PHASE4-FINAL-CHECKLIST.md  M-008-ARCHITECTURE.md  M-008-HANDOFF.md  M-008-INDEX.md  M-008-QUICK-START.md  M-008-SESSION-SUMMARY.md  M-008-TELEGRAM-COOCOOK-IMPLEMENTATION-PLAN.md  PHASE4_DOCUMENTATION_INDEX.md  PROJECT_HIERARCHY.md  REPORT_LATEST.md  REVIEW_PAGES_COMPLETION_REPORT.md  SCALABILITY_INDEX.md  cost-log.md  (+18 more)
(+597 files in other folders)
