[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softfactory"
version = "1.0.0"
description = "SoftFactory Platform - Enterprise Multi-Service SaaS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate>=4.0.0",
    "flask-socketio==5.3.5",
    "python-telegram-bot==20.5",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "python-json-logger>=2.0.7",
    "anthropic>=0.42.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy==2.0.23",
    "python-socketio==5.9.0",
    "python-engineio==4.7.1",
    "pyjwt==2.9.0",
    "stripe==5.4.0",
    "apscheduler==3.10.4",
    "sentry-sdk[flask]>=1.40.0",
    "psutil>=5.9.0",
    "Jinja2>=3.1.0",
    "boto3>=1.34.0",
    "reportlab>=4.0.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "cryptography>=41.0.0",
    "elasticsearch==8.10.0",
    "redis>=4.0.0",
]
authors = [
    {name = "SoftFactory Team", email = "team@softfactory.com"}
]
keywords = ["platform", "saas", "api", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.1",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.0",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.19",
]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | daemon/.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "daemon/.venv/*"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_error_summary = false
exclude = ["daemon/.venv/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_cors.*",
    "flask_sqlalchemy.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
    "performance: performance tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "daemon/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]

[tool.bandit]
skips = ["B101", "B601"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-attributes = 7
max-args = 5

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["**/*.sql", "**/*.md", "**/*.json"]
